<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".view.MainActivity"
            tools:layout_editor_absoluteX="5dp">

            <ImageView
                android:id="@+id/ivGallery"
                android:layout_width="359dp"
                android:layout_height="196dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="32dp"
                android:contentDescription="@string/current_displayed_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvTimestamp"
                android:layout_width="209dp"
                android:layout_height="35dp"
                android:layout_marginTop="68dp"
                android:layout_marginEnd="28dp"
                android:layout_marginRight="28dp"
                android:text=""
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivGallery" />

            <TextView
                android:id="@+id/captionLabel"
                android:text="@string/caption"
                android:layout_width="113dp"
                android:layout_height="36dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivGallery" />

            <EditText
                android:id="@+id/etCaption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginLeft="28dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/captionLabel"
                app:layout_constraintTop_toBottomOf="@+id/ivGallery"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/timestampLabel"
                android:layout_width="106dp"
                android:layout_height="38dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="68dp"
                android:text="@string/timestamp"
                app:layout_constraintEnd_toStartOf="@+id/tvTimestamp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivGallery" />

            <Button
                android:id="@+id/btnPrev"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="112dp"
                android:layout_weight="1"
                android:onClick="scrollPhotos"
                android:text="@string/prev"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivGallery"
                tools:ignore="ButtonStyle" />


            <Button
                android:id="@+id/btnNext"
                android:layout_width="95dp"
                android:layout_height="45dp"
                android:layout_marginTop="112dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:onClick="scrollPhotos"
                android:text="@string/next"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/btnPrev"
                app:layout_constraintTop_toBottomOf="@+id/ivGallery"
                tools:ignore="ButtonStyle" />


            <Button
                android:id="@+id/btnFavourite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="180dp"
                android:text="@string/favourite"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivGallery" />

            <Button
                android:id="@+id/btnRemove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="180dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/remove"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivGallery" />

            <ImageView
                android:id="@+id/imageView_mic"
                android:layout_width="63dp"
                android:layout_height="91dp"
                android:layout_marginStart="160dp"
                android:layout_marginLeft="160dp"
                android:layout_marginTop="120dp"
                android:contentDescription="@string/image_gallery"
                android:onClick="getSpeechInput"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivGallery"
                app:srcCompat="@drawable/mic_image" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <!-- Main content -->

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/colorPrimary"
            app:itemIconTint="@color/white"
            app:itemTextColor="@color/white"
            app:menu="@menu/bottom_navigation_menu" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>