<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp"
    android:orientation="vertical"
    tools:context=".view.SearchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvFromDateTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="From: "
            android:textSize="24sp" />

        <EditText
            android:id="@+id/etFromDateTime"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Enter From Date"
            android:inputType="datetime"
            android:textSize="24sp"
            tools:ignore="Autofill" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvToDateTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="To: "
            android:textSize="24sp" />

        <EditText
            android:id="@+id/etToDateTime"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Enter To Date"
            android:inputType="datetime"
            android:textSize="24sp"
            tools:ignore="Autofill" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvKeywords"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Keywords: "
            android:textSize="24sp" />

        <EditText
            android:id="@+id/etKeywords"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Enter Caption"
            android:inputType="none|textNoSuggestions"
            android:textSize="24sp"
            tools:ignore="Autofill" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="55dp"
            android:layout_weight="1"
            android:onClick="cancel"
            android:text="Cancel"
            tools:ignore="ButtonStyle"
            android:layout_marginRight="55dp" />

        <Button
            android:id="@+id/go"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="go"
            android:text="Search"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</LinearLayout>