<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <item
      android:id="@+id/navigation_home"
      android:icon="@drawable/ic_home"
      android:title="Home" />

  <item
      android:id="@+id/navigation_search"
      android:icon="@drawable/ic_search"
      android:title="Search" />

  <item
      android:id="@+id/navigation_camera"
      android:icon="@drawable/ic_camera"
      android:title="Camera" />

  <item
      android:id="@+id/navigation_upload"
      android:icon="@drawable/ic_upload"
      android:title="Upload" />
</menu>
